Add method to Notifications by user ID and type